fixed all ai features and UI changes